--- a/index.html/style.css
+++ b/index.html/style.css
@@ -72,3 +72,50 @@
   height: auto;
   margin-bottom: 0;
 }
+
+/* our featured section */
+.featured {
+  text-align: center;
+  margin-top: 100px;
+  width: 90%;
+  margin: auto;
+}
+.featured h1 {
+  margin-top: 100px;
+}
+.card_container {
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+}
+.first img {
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(167, 33, 98, 0.15);
+  padding: 100px 50px 0px;
+  display: flex;
+  align-items: flex-end;
+  height: 600px;
+}
+.second img {
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(5, 151, 160, 0.15);
+  padding: 50px 0px;
+  display: flex;
+  align-items: center;
+  height: 600px;
+}
+.third img {
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(71, 125, 17, 0.15);
+  padding: 100px 50px 0px;
+  display: flex;
+  align-items: flex-end;
+  height: 600px;
+}
+.card_container a {
+  display: inline-block;
+  margin: 20px;
+  color: black;
+  font-size: 24px;
+  font-weight: 700;
+}
