--- a/index.html/style.css
+++ b/index.html/style.css
@@ -60,7 +60,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  width: 48%;
+  max-width: 48%;
   padding-left: 10px;
 }
 
@@ -77,7 +77,7 @@
 .featured {
   text-align: center;
   margin-top: 100px;
-  width: 90%;
+  max-width: 90%;
   margin: auto;
 }
 .featured h1 {
@@ -121,7 +121,7 @@
 }
 
 .container {
-  width: 90%;
+  max-width: 90%;
   margin: 70px auto;
   padding: 40px 0;
   padding: 100px 100px;
@@ -160,4 +160,23 @@ span {
 }
 .right-content {
   margin: 50px 150px 50px 20px;
+}
+
+/* latest deals sections */
+.latest {
+  background-image: url("../Flower Asset/Rectangle\ 9.png");
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+  max-width: 90%;
+  margin: 100px auto;
+}
+.input {
+  padding: 13px 300px 13px 10px;
+  border-radius: 5px;
+  border: 1px solid gray;
+  margin-right: 10px;
 }
